# lean-stack

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  START.md  docker-compose.local.yml
apps/lean-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  entrypoint.sh  manage.py  pyproject.toml
apps/lean-backend/apps/_common/: apps.py  models.py
apps/lean-backend/apps/billing/: apis.py  apps.py  models.py  schemas.py
apps/lean-backend/apps/billing/migrations/: 0001_initial.py  0002_alter_ledgerentry_order.py
apps/lean-backend/apps/health/: apis.py  models.py  schemas.py
apps/lean-backend/apps/member/: apis.py  auth.py  models.py  schemas.py
apps/lean-backend/apps/member/migrations/: 0001_initial.py  0002_member_password.py
apps/lean-backend/apps/order/: apis.py  models.py  schemas.py
apps/lean-backend/apps/order/migrations/: 0001_initial.py  0002_alter_order_status.py  0002_order_paid_amount_order_status.py  0003_order_note.py  0004_order_contact_name_order_contact_phone_and_more.py
apps/lean-backend/apps/product/: apis.py  models.py  schemas.py
apps/lean-backend/apps/product/migrations/: 0001_initial.py  0002_product_image_url.py
apps/lean-backend/apps/progress/: apis.py  models.py  schemas.py  tasks.py
apps/lean-backend/apps/progress/migrations/: 0001_initial.py  0002_job_completed_at_job_started_at.py
apps/lean-backend/apps/quotation/: apis.py  apps.py  models.py  schemas.py
apps/lean-backend/apps/web/: apis.py
apps/lean-backend/core/: __init__.py  api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+99 files in other folders)
